# Smobile_market_place

./: .env.template  .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  reset.py
backend/alembic/: env.py
backend/app/: main.py  schemas.py  seed.py
backend/app/api/: __init__.py
backend/app/api/v1/endpoints/: admin.py  auth.py  chat.py  listings.py  media.py  orders.py  users.py
backend/app/core/: config.py  database.py  security.py  socket.py
backend/app/models/: chat.py  listing.py  order.py  user.py
frontend/: .dockerignore  Dockerfile.prod  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/listings/create/: page.tsx
frontend/app/orders/: page.tsx
frontend/components/: Navbar.tsx  Providers.tsx
frontend/components/chat/: ChatRoomList.tsx  ChatWindow.tsx
frontend/components/listings/: ListingCard.tsx
frontend/components/ui/: Button.tsx  Card.tsx  EmptyState.tsx  ImageUpload.tsx  Input.tsx  ListingSkeleton.tsx  Skeleton.tsx  ToastProvider.tsx
frontend/hooks/: useListings.ts
frontend/lib/: api.ts  utils.ts
frontend/store/: authStore.ts  chatStore.ts
frontend/types/: index.ts
nginx/: nginx.conf
